--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 COOKIE_PASSWORD=
 
 GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
