--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ COOKIE_PASSWORD=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+MY_PHONE_NUMBER=
