--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,16 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 
 COOKIE_PASSWORD=
 
+# Github
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
+# Twilio
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 MY_PHONE_NUMBER=
+
+# Cloudflare
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_API_KEY=
